--- a/mikrotik/build.gradle
+++ b/mikrotik/build.gradle
@@ -30,4 +30,22 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
-apply from: 'publish.gradle'
+ext {
+    bintrayRepo = 'mikro'
+    bintrayName = 'mikrotik'
+    publishedGroupId = 'sy.iyad'
+    libraryName = 'mikrotik'
+    artifact = 'mikrotik'
+    libraryDescription = 'A widget to load WebView as an Overlay.’'
+    siteUrl = 'https://github.com/iyadseizer/mikro'
+    gitUrl = 'https://github.com/iyadseizer/mikro.git'
+    libraryVersion = '1.10.15'
+    developerId = 'developerId'
+    developerName = 'iyad fawwaz'
+    developerEmail = 'se.black3d@email.com'
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
