--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,18 @@
-apply plugin: 'com.android.application'
 
+plugins {
+    id 'com.android.application'
+}
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    namespace 'sy.iyad.server'
+    compileSdk 33
+
 
     defaultConfig {
         applicationId "sy.iyad.server"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdk 27
+        targetSdk 33
         versionCode 1
-        versionName "1.10.21"
+        versionName "2.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -20,15 +23,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '33.0.1'
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation project(path: ':mikrotik')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
