--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        mavenLocal()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-        //classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    id 'com.android.application' version '8.1.0' apply false
 }
