--- a/mikrotik/publish.gradle
+++ b/mikrotik/publish.gradle
@@ -1,6 +1,8 @@
  plugins {
      id 'maven-publish'
      id 'java-library'
+     id 'signing'
+
  }
  //plugin: 'com.jfrog.bintray'
 
@@ -11,9 +13,10 @@ publishing {
     publications {
         Production(MavenPublication) {
             artifact("$buildDir/outputs/aar/mikrotik-release.aar")
-            groupId
+            groupId 'sy.iyad'
             artifactId 'mikrotik'
             version this.version
+            from components.java
 
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
@@ -56,6 +59,7 @@ bintray {
         }
     }
 }
+
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
