--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
+usr=iyadseizer
+key=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
