--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,29 +2,83 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="sy.iyad.server">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/avatarx"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/avatarx"
         android:supportsRtl="true"
         android:isGame="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup"
-        tools:targetApi="lollipop">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Ser"
+        tools:ignore="AllowBackup">
+        <activity
+            android:exported="true"
+            android:name=".LoginActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+        <activity
+            android:exported="true"
+            android:name="sy.iyad.server.Activities.CommanderActivity"
+            android:windowSoftInputMode="adjustResize">
+
         </activity>
+        <activity
+            android:exported="true"
+            android:name="sy.iyad.server.Activities.GenerateUserActivity"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
+        <activity
+            android:exported="true"
+            android:name="sy.iyad.server.Activities.MainActivity"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
+        <activity
+            android:exported="true"
+            android:name="sy.iyad.server.share.SharingActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:label="@string/app_namex"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+                <data android:mimeType="video/*"/>
+                <data android:mimeType="image/*"/>
+            </intent-filter>
+        </activity>
+        <service
+            android:name="sy.iyad.server.FirebaseUtils.MessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
